# NDSS23

./: .gitmodules  README.md  patch  seal-install.sh
src/: 100m  10g  10m  1g  5g  CMakeLists.txt  alice.cpp  clear  hash.h  include-20.h  include-22.h  include-24.h  include-26.h  include.h  inter  intra  inv.h  makefile  opt-sender.cpp  ot.cpp  ot.h  run_ot_offline.sh  run_psi  run_ttp_offline  she-seal.cpp  ttp.h
src/sgx/: Makefile  run_sgx_offline  run_sgx_strawman
src/sgx/App/: App.cpp  App.cpp.old
src/sgx/Enclave/: Enclave.config.xml  Enclave.config.xml.old  Enclave.cpp  Enclave.cpp.old  Enclave.edl  Enclave.edl.old  aes.h  block.h  prg.h  utils.h  utils.hpp
